use Integer.valueOf()
git-svn-id: svn://localhost/nikki/trunk@267 4994fb73-42c4-f447-92f5-66ae8ea45fe7