@@ -143,17 +143,17 @@ public class ImageWriter extends ImageDataIO
         {
             Entry entry = new Entry(Exif.ASCII);
             entry.setValue(0, wp.getLatitude().getDirection().getCharacter());
-            gpsIFD.setEntry(new Integer(Exif.GPSLatitudeRef), 0, entry);
+            gpsIFD.setEntry(Integer.valueOf(Exif.GPSLatitudeRef), 0, entry);
             entry = new Entry(Exif.RATIONAL);
             entry.setValue(0, new Rational((float)wp.getLatitude().getMagnitude()));
-            gpsIFD.setEntry(new Integer(Exif.GPSLatitude), 0, entry);
+            gpsIFD.setEntry(Integer.valueOf(Exif.GPSLatitude), 0, entry);
 
             entry = new Entry(Exif.ASCII);
             entry.setValue(0, wp.getLongitude().getDirection().getCharacter());
-            gpsIFD.setEntry(new Integer(Exif.GPSLongitudeRef), 0, entry);
+            gpsIFD.setEntry(Integer.valueOf(Exif.GPSLongitudeRef), 0, entry);
             entry = new Entry(Exif.RATIONAL);
             entry.setValue(0, new Rational((float)wp.getLongitude().getMagnitude()));
-            gpsIFD.setEntry(new Integer(Exif.GPSLongitude), 0, entry);
+            gpsIFD.setEntry(Integer.valueOf(Exif.GPSLongitude), 0, entry);
         }
     }
 
